Update 1.4 almost complete